--- a/_config.yml
+++ b/_config.yml
@@ -1,50 +1,17 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# Setup
+title:               'Desde Gomeslavia con amor'
+description:         'Tribulaciones, cábalas y demás pensamientos sin orden ni concierto con el único afán de sacarlos de mi cabeza y hacer sitio para muchos otros nuevos.'
+url:                 https://himliano.github.io
+baseurl:             ''
+paginate:            5
+permalink:           pretty
 
-title: Desde Gomeslavia con Amor
-description: >- # this means to ignore newlines until "baseurl:"
-  Tribulaciones, cábalas y demás pensamientos sin orden ni concierto con el único afán de sacarlos de mi cabeza y hacer sitio para muchos otros nuevos.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://himliano.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+version: 0.1
 
-# Build settings
-theme: minima
+# About/contact
+author:
+  name:              Himliano
+
+# Gems
 plugins:
-  - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+  - jekyll-paginate
